feat: add get account challenges route
